--- a/source/2008-10-11-ie7-update-hangs-after-reboot-on-sbs-2003.html.erb
+++ b/source/2008-10-11-ie7-update-hangs-after-reboot-on-sbs-2003.html.erb
@@ -1,12 +1,12 @@
 ---
 layout: article
 title: IE7 update hangs after reboot on SBS 2003
-post_date: 2008-10-11 22:37:04.000000000 -05:00
+post_date: 2008-10-11
 ---
 While applying service packs for a Windows 2003 SBS today, I installed IE7.  After the requisite reboot, I tried logging in and the usual "Setting up personalized settings for Internet Explorer" dialog came up.
-
+<br><br>
 It stayed there.  And stayed there.  It was hung up.
-
+<br><br>
 After a little hunting (on my laptop, since the server wasn't going anywhere!), I found this tip that suggested:
 <ul>
 	<li>Control - Alt - Delete</li>
