--- a/source/2008-11-10-wsus-30-memory-usage-and-how-to-adjust-it.html.erb
+++ b/source/2008-11-10-wsus-30-memory-usage-and-how-to-adjust-it.html.erb
@@ -1,22 +1,22 @@
 ---
 layout: article
 title: WSUS 3.0 memory usage and how to adjust it
-post_date: 2008-11-10 09:52:54.000000000 -06:00
+post_date: 2008-11-10
 ---
 I set up a new Windows 2003 R2 Small Business Server (SBS) last week and I'm going over it and tweaking things.
-
+<br><br>
 While looking at the task manager, I noticed a process that was using 1.6 GB of RAM.  This sqlserver.exe process was going wild!
-
+<br><br>
 I turned on the process IDs in Task Manager (View &gt; Select Columns) so I could get a process ID for the offending process.  For me, it was process id <strong>1664</strong>.  Then, I turned to the console for some troubleshooting:
-<pre name="code" class="vb:nogutter">C:\tasklist /svc /fi "PID eq 1664"</pre>
+<% code("shell") do %>C:\tasklist /svc /fi "PID eq 1664"<% end %>
 You should change your process id to match if you're running this at home.
-<pre name="code" class="vb:nogutter">Image Name                     PID Services
+<% code("shell") do %>Image Name                     PID Services
 ========================= ======== =======================
-sqlservr.exe                  1664 MSSQL$MICROSOFT##SSEE</pre>
+sqlservr.exe                  1664 MSSQL$MICROSOFT##SSEE<% end %>
 ﻿﻿﻿
 Microsoft SSEE shows in the services panel as Windows Internal Database, which is the database for Windows Software Update Services.  Now that we know the instance name, we can reconfigure it:
-
-<pre name="code" class="vb:nogutter">C:\osql -E -S <servername>MICROSOFT##SSEE
+<br><br>
+<% code("shell") do %>C:\osql -E -S <servername>MICROSOFT##SSEE
 ﻿1> sp_configure ’show advanced options’, 1;
 2> reconfigure;
 3> go
@@ -27,6 +27,6 @@ Configuration option ’show advanced options’ changed from 0 to 1.
 3> go
 Configuration option ‘max server memory (MB)’ changed from
   2147483647 to 512. Run the RECONFIGURE statement to install.
-1> exit</servername></pre>
-
+1> exit</servername><% end %>
+<br><br>
 While you're at it, you may want to reconfigure the SBSMONITORING database instance if you're running SBS.  I set mine to 70 MB.
