--- a/source/2009-01-20-changing-the-mysql-root-password.html.erb
+++ b/source/2009-01-20-changing-the-mysql-root-password.html.erb
@@ -1,9 +1,9 @@
 ---
 layout: article
 title: Changing the mysql root password
-post_date: 2009-01-20 15:54:05.000000000 -06:00
+post_date: 2009-01-20
 ---
 I never can remember how to do this from the command line and the docs are just hazy enough to be a pain:
-<pre>&gt; mysqladmin -u root -p password &lt;ENTER_NEW_PASSWORD&gt;</pre>
+<% code("shell") do %>&gt; mysqladmin -u root -p password &lt;ENTER_NEW_PASSWORD&gt;<% end %>
 And yes, that is "space-p-a-s-s-w-o-r-d" after the -p.  Sending that tells mysql that you want to change the password to whatever is next.  You'll be prompted for the existing/old password:
-<pre>Enter password: ********</pre>
+<% code("shell") do %>Enter password: ********<% end %>
