--- a/source/2009-03-30-upgrading-to-rails-23-with-git.html.erb
+++ b/source/2009-03-30-upgrading-to-rails-23-with-git.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Upgrading to Rails 2.3 with git
-post_date: 2009-03-30 01:19:32.000000000 -05:00
+post_date: 2009-03-30
 ---
 I upgraded an application to Rails 2.3, starting with making a new empty branch and using that merge back to a staging branch, which is very well described by <a href="http://blog.new-bamboo.co.uk/2009/3/17/upgrading-rails-with-git">Olly at the Bamboo Blog</a>.
 
