--- a/source/2009-08-25-announcing-lowdown-a-cucumber-feature-editing-webapp.html.erb
+++ b/source/2009-08-25-announcing-lowdown-a-cucumber-feature-editing-webapp.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: ! 'Announcing: Lowdown, a Cucumber feature editing webapp'
-post_date: 2009-08-25 22:35:09.000000000 -05:00
+post_date: 2009-08-25
 ---
 <div class="mceTemp mceIEcenter"><dl class="wp-caption aligncenter" style="width: 610px;"> <dt class="wp-caption-dt"><img title="Lowdown App" src="/wp-content/images/lowdown-screen.png" alt="" width="600" height="337" /></dt> </dl></div>
 An original application completed for <a href="http://r09.railsrumble.com">Rails Rumble 2009</a>.
