--- a/source/2009-10-21-capistrano-deploy-error-fatal-unable-to-create-gitindex-lock-file-exists.html.erb
+++ b/source/2009-10-21-capistrano-deploy-error-fatal-unable-to-create-gitindex-lock-file-exists.html.erb
@@ -2,7 +2,7 @@
 layout: article
 title: ! 'Capistrano deploy error &quot;fatal: unable to create &#039;.git/index.lock&#039;:
   File exists&quot;'
-post_date: 2009-10-21 09:54:35.000000000 -05:00
+post_date: 2009-10-21
 ---
 This isn't specific to capistrano, necessarily, but I ran into it deploying.
 
