--- a/source/2009-12-02-ubuntu-postfix-error-postdrop-warning-unable-to-look-up-publicpickup-no-such-file-or-directory.html.erb
+++ b/source/2009-12-02-ubuntu-postfix-error-postdrop-warning-unable-to-look-up-publicpickup-no-such-file-or-directory.html.erb
@@ -2,7 +2,7 @@
 layout: article
 title: ! 'Ubuntu postfix error -- postdrop: warning: unable to look up public/pickup:
   No such file or directory'
-post_date: 2009-12-02 14:40:36.000000000 -06:00
+post_date: 2009-12-02
 ---
 I installed postfix and got this error:
 <code>postdrop: warning: unable to look up public/pickup: No such file or directory.</code>
