--- a/source/2010-02-25-kansas-city-pictures.html.erb
+++ b/source/2010-02-25-kansas-city-pictures.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Kansas City pictures
-post_date: 2010-02-25 23:03:51.000000000 -06:00
+post_date: 2010-02-25
 ---
 Some fantastic pictures of Kansas City:
 <p style="text-align: left;"><a href="http://www.flickr.com/photos/rock_chalk_jhawk_ku/1756456026/"><img class="alignnone" title="Kansas City Skyline at night" src="http://farm3.static.flickr.com/2186/1756456026_b8b7b81730.jpg" alt="" width="500" height="340" /></a></p>
