--- a/source/2010-02-26-custom-date-formats-in-rails.html.erb
+++ b/source/2010-02-26-custom-date-formats-in-rails.html.erb
@@ -1,15 +1,15 @@
 ---
 layout: article
 title: Custom date formats in Rails
-post_date: 2010-02-26 14:58:05.000000000 -06:00
+post_date: 2010-02-26
 ---
 I like to keep my date formats all together, instead of having <code>.strftime()</code> mixed into my code.
 <!--more-->
 Create a file <code>/config/initializers/custom_date_formats.rb</code>
 
 Load your formats into <code>Time::DATE_FORMATS</code>
-<% code('ruby') do %>Time::DATE_FORMATS[:ymd] = "%Y-%m-%d"<% end %>
+<% code("ruby") do %>Time::DATE_FORMATS[:ymd] = "%Y-%m-%d"<% end %>
 
 Use like so:
-<% code('ruby') do %>@christmas_post.created_at.to_s(:ymd)
-# => "2009-12-25"</pre>
+<% code("ruby") do %>@christmas_post.created_at.to_s(:ymd)
+# => "2009-12-25"<% end %>
