--- a/source/2010-03-10-installing-a-virtual-machine-with-dell-oem-disks.html.erb
+++ b/source/2010-03-10-installing-a-virtual-machine-with-dell-oem-disks.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Installing A Virtual Machine With Dell OEM Disks
-post_date: 2010-03-10 21:53:07.000000000 -06:00
+post_date: 2010-03-10
 ---
 If you're willing to put in the effort (and assuming you're legal), it could work, but I'd suggest using a retail license which avoids the caveats you'll soon be reading about below:
 
