--- a/source/2010-03-13-kansas-city-ruby-users-luke-pillow-on-jeweler.html.erb
+++ b/source/2010-03-13-kansas-city-ruby-users-luke-pillow-on-jeweler.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: ! 'Kansas City Ruby Users: Luke Pillow on Jeweler'
-post_date: 2010-03-13 18:56:29.000000000 -06:00
+post_date: 2010-03-13
 ---
 <a href="http://twitter.com/lpillow">Luke Pillow</a> present to the Kansas City Ruby Users Group on Jeweler and <span style="text-decoration: line-through;">Gemcutter</span> rubygems.org.
 
