--- a/source/2010-07-14-webex-arf-conversion-to-something-editable-on-mac.html.erb
+++ b/source/2010-07-14-webex-arf-conversion-to-something-editable-on-mac.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Webex .ARF conversion to something editable on Mac
-post_date: 2010-07-14 01:12:45.000000000 -05:00
+post_date: 2010-07-14
 ---
 You can't import the Webex format directly into iMovie or your editing tool of choice.
 
