--- a/source/2010-07-20-microsoft-office-2007-options-and-about.html.erb
+++ b/source/2010-07-20-microsoft-office-2007-options-and-about.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Microsoft Office 2007 Options and About
-post_date: 2010-07-20 21:35:03.000000000 -05:00
+post_date: 2010-07-20
 ---
 You know how easy it was to look at program information by going to "Help &gt; About"? Or maybe you are used to going to "Tools &gt; Options" Not so easy in Microsoft Office 2007.
 
