--- a/source/2010-09-02-back-up-people.html.erb
+++ b/source/2010-09-02-back-up-people.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Back Up, People!
-post_date: 2010-09-02 20:29:33.000000000 -05:00
+post_date: 2010-09-02
 ---
 It's easy. It's safe. It's secure.
 
