--- a/source/2010-09-07-using-factory-girl-with-rails-3.html.erb
+++ b/source/2010-09-07-using-factory-girl-with-rails-3.html.erb
@@ -1,14 +1,14 @@
 ---
 layout: article
 title: Using Factory Girl with Rails 3
-post_date: 2010-09-07 17:23:42.000000000 -05:00
+post_date: 2010-09-07
 ---
 Setting up a new project, I couldn't get FactoryGirl working.  From the README:
 
 <blockquote>If you want to use factory_girl with Rails 3, see <a href="http://github.com/thoughtbot/factory_girl_rails">http://github.com/thoughtbot/factory_girl_rails</a></blockquote>
 
 I added this to my Gemfile:
-<% code('ruby') do %>gem 'factory_girl_rails'<% end %>
+<% code("ruby") do %>gem 'factory_girl_rails'<% end %>
 
 A <code>bundle install</code> to install and done.
 
