--- a/source/2010-09-19-converting-erb-to-haml-in-rails3.html.erb
+++ b/source/2010-09-19-converting-erb-to-haml-in-rails3.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Converting erb to haml in rails3
-post_date: 2010-09-19 16:17:59.000000000 -05:00
+post_date: 2010-09-19
 ---
 I'm taking over a project that's just started and prefer to use haml. In setting up my environment to work with rails3 and haml, here's the best way I found to convert the fledgling app to haml.
 <h2>Install gems</h2>
