--- a/source/2010-09-24-running-rails-migrations-in-other-databases.html.erb
+++ b/source/2010-09-24-running-rails-migrations-in-other-databases.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Running rails migrations in other databases
-post_date: 2010-09-24 05:04:56.000000000 -05:00
+post_date: 2010-09-24
 ---
 We have a set of Ruby on Rails applications that shares user logins, so we put that table in a database and connect to it from each application.
 
