--- a/source/2010-10-26-simplifying-library-requires-with-load_path.html.erb
+++ b/source/2010-10-26-simplifying-library-requires-with-load_path.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Simplifying Library Requires With $LOAD_PATH
-post_date: 2010-10-26 13:44:29.000000000 -05:00
+post_date: 2010-10-26
 ---
 When creating scripts or libraries which load custom libraries or modules in the past, I've generally loaded them in the following manner:
 
