--- a/source/2011-03-14-thebes-profiling-spork-backup-rubygem.html.erb
+++ b/source/2011-03-14-thebes-profiling-spork-backup-rubygem.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Thebes, profiling spork, backup rubygem
-post_date: 2011-03-14 15:41:34.000000000 -05:00
+post_date: 2011-03-14
 ---
 <h1 id="thebes_a_new_minimal_sphinx_gem_for_rails">Thebes, a new minimal sphinx gem for Rails</h1>
 
