--- a/source/2011-05-27-tools-we-love.html.erb
+++ b/source/2011-05-27-tools-we-love.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Tools we love
-post_date: 2011-05-27 03:05:07.000000000 -05:00
+post_date: 2011-05-27
 ---
 We spend a lot of time on our computers, so we spend a lot of time trying out new tools.  Here are some of our favorites:
 <h2><a href="http://bit.ly/backblaze-db">Backblaze</a></h2>
