--- a/source/2011-09-09-hide-zero-balance-clients-in-harvest-uninvoiced-report.html.erb
+++ b/source/2011-09-09-hide-zero-balance-clients-in-harvest-uninvoiced-report.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Hide zero balance clients in Harvest Uninvoiced Report
-post_date: 2011-09-09 04:42:01.000000000 -05:00
+post_date: 2011-09-09
 ---
 <strong>UPDATE:</strong> Check out the updated bookmarklet for more functionality:
 <a href="http://databasically.com/2011/12/16/even-better-hiding-zero-balance-clientsprojects-in-harvest-uninvoiced-report/" title="Even better: hiding zero balance clients/projects in Harvest Uninvoiced Report">Even better: hiding zero balance clients/projects in Harvest Uninvoiced Report</a>
