--- a/source/2011-12-16-even-better-hiding-zero-balance-clientsprojects-in-harvest-uninvoiced-report.html.erb
+++ b/source/2011-12-16-even-better-hiding-zero-balance-clientsprojects-in-harvest-uninvoiced-report.html.erb
@@ -2,7 +2,7 @@
 layout: article
 title: ! 'Even better: hiding zero balance clients/projects in Harvest Uninvoiced
   Report'
-post_date: 2011-12-16 03:51:27.000000000 -06:00
+post_date: 2011-12-16
 ---
 I got a few comments on the <a href="http://databasically.com/2011/09/09/hide-zero-balance-clients-in-harvest-uninvoiced-report/" title="Hide zero balance clients in Harvest Uninvoiced Report">original post</a> (<a href="http://databasically.com/2011/09/09/hide-zero-balance-clients-in-harvest-uninvoiced-report/">Hide zero balance clients in Harvest Uninvoiced Report</a>) about not suppressing projects that have a zero balance if the overall client has some billing.
 
