--- a/source/2012-04-09-lowdown-is-now-free-and-open-source.html.erb
+++ b/source/2012-04-09-lowdown-is-now-free-and-open-source.html.erb
@@ -3,7 +3,7 @@ layout: article
 title: Lowdown is now free and open-source
 excerpt: !binary |-
   TG93ZG93biBpcyBub3cgb3Blbi1zb3VyY2U=
-post_date: 2012-04-09 19:16:03.000000000 -05:00
+post_date: 2012-04-09
 ---
 <p>Lowdown was a Rails Rumble project in 2009, aiming to help business owners that want custom software work with developers and designers to get on the same page.</p>
 
