--- a/source/2012-04-18-startup-weekend-kansas-city.html.erb
+++ b/source/2012-04-18-startup-weekend-kansas-city.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Startup Weekend Kansas City
-post_date: 2012-04-18 04:34:07.000000000 -05:00
+post_date: 2012-04-18
 ---
 <h2 id="howtheeventisstructured">How the event is structured</h2>
 
