--- a/source/2012-09-11-whats-new-in-ruby-september-2012-edition.html.erb
+++ b/source/2012-09-11-whats-new-in-ruby-september-2012-edition.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: ! 'What''s new in Ruby: September 2012 edition'
-post_date: 2012-09-11 20:29:43.000000000 -05:00
+post_date: 2012-09-11
 ---
 Every month, <a href="http://meetup.com/kcruby">Kansas City Ruby</a> (#kcruby) reviews a subset of Peter Cooper's fantastic <a href="http://rubyweekly.com/?utm_source=databasically">Ruby Weekly</a> selections, along with other items picked up around the web.
 
@@ -28,21 +28,21 @@ For instance, this <a href="https://gist.github.com/3295184" target="_blank">gis
 <h4><a href="http://gembundler.com/v1.2/whats_new.html" target="_blank">Bundler 1.2 Released</a></h4>
 <h5>Specify the Ruby version and/or engine you want</h5>
 <p>
-<% code('ruby') do %>ruby "1.9.3", :engine => "jruby", :engine_version => "1.6.7"<% end %>
+<% code("ruby") do %>ruby "1.9.3", :engine => "jruby", :engine_version => "1.6.7"<% end %>
 </p>
 
 <h5>Package :git and :path Dependencies</h5>
 <p>
-<% code('ruby') do %>bundle package --all<% end %>
+<% code("ruby") do %>bundle package --all<% end %>
 The bundle package command can also package :git and :path dependencies besides .gem files. This needs to be explicitly enabled via the --all option. Once used, the --all option will be remembered.
 </p>
 
 <h5>Local Git Repos</h5>
 <p><blockquote>Now when developing against a remote git repository, you can use a local git repo and keep the remote version for deployment. You can do this by setting a local git override:
-<% code('ruby') do %>bundle config local.GEM_NAME /path/to/local/git/repository<% end %></blockquote>
+<% code("ruby") do %>bundle config local.GEM_NAME /path/to/local/git/repository<% end %></blockquote>
 
 Then, you can use your local development copy with a standard command:
-<% code('ruby') do %>gem 'rack', :github => 'rack/rack', :branch => 'master'<% end %>
+<% code("ruby") do %>gem 'rack', :github => 'rack/rack', :branch => 'master'<% end %>
 </p>
 
 
