--- a/source/2012-10-09-whats-new-in-ruby-october-2012-edition.html.erb
+++ b/source/2012-10-09-whats-new-in-ruby-october-2012-edition.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: ! 'What''s new in Ruby: October 2012 edition'
-post_date: 2012-10-09 21:35:08.000000000 -05:00
+post_date: 2012-10-09
 ---
 Every month, <a href="http://meetup.com/kcruby">Kansas City Ruby</a> (#kcruby) reviews a subset of Peter Cooper's fantastic <a href="http://rubyweekly.com/?utm_source=databasically">Ruby Weekly</a> selections, along with other items picked up around the web.
 
