--- a/source/2012-10-16-visualizing-a-140000-computer-botnet.html.erb
+++ b/source/2012-10-16-visualizing-a-140000-computer-botnet.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Visualizing a 140,000 computer botnet
-post_date: 2012-10-16 16:11:10.000000000 -05:00
+post_date: 2012-10-16
 ---
 F-Secure <a href="http://www.f-secure.com/weblog/archives/00002430.html">posted</a> about the ZeroAccess botnet and included some pictures showing where the infected computers are.
 
