--- a/source/2009-01-23-xp-password-reset.html.erb
+++ b/source/2009-01-23-xp-password-reset.html.erb
@@ -1,10 +1,10 @@
 ---
 layout: article
 title: XP password reset
-post_date: 2009-01-23 10:29:50.000000000 -06:00
+post_date: 2009-01-23
 ---
 Someone asked me to fix their computer, but they didn't know any of the passwords for it.  Short of formatting it, I didn't really know what to do.
-
+<br><br>
 After some searching, I found the <a href="http://home.eunet.no/pnordahl/ntpasswd/">Offline NT Password &amp; Registry Editor, Bootdisk / CD</a> which worked perfectly.
 <ul>
 	<li>Download the CD image</li>
@@ -15,5 +15,5 @@ After some searching, I found the <a href="http://home.eunet.no/pnordahl/ntpassw
 	<li>Write your changes to the disk</li>
 </ul>
 You can also edit the registry if you need to hack some bad keys out of there, like spyware startup entries.
-
+<br><br>
 Super handy tool!
