--- a/source/2009-03-10-visualizing-git-history.html.erb
+++ b/source/2009-03-10-visualizing-git-history.html.erb
@@ -1,12 +1,12 @@
 ---
 layout: article
 title: Visualizing git history
-post_date: 2009-03-10 14:33:34.000000000 -05:00
+post_date: 2009-03-10
 ---
 I've been using <a href="http://git-scm.com/">git</a> for version control on a new project.  Instead of needing a connection to the server (as CVS and SVN do), changes are stored locally.
-
+<br><br>
 Every once in a while, I want to poke back the history. git ships with a graphical repository viewer, but I like <a href="http://gitx.frim.nl/">gitx</a> better.
-
+<br><br>
 git makes branching off to try something super easy, which is quickly becoming one of my favorite features. I can create a branch quickly, try something out, switch away and come back later if I want.
-
+<br><br>
 Using gitx to view my repository history, I can quickly find where branches diverged and it's just kinda neat to look at.
