--- a/source/2010-01-15-kansas-city-ruby-user-group-shashank-date-on-blocks-procs-and-lambdas.html.erb
+++ b/source/2010-01-15-kansas-city-ruby-user-group-shashank-date-on-blocks-procs-and-lambdas.html.erb
@@ -1,6 +1,6 @@
 ---
 layout: article
 title: ! 'Kansas City Ruby User Group: Shashank Date on Blocks, Procs, and Lambdas'
-post_date: 2010-01-15 10:29:06.000000000 -06:00
+post_date: 2010-01-15
 ---
 <object width="500" height="281"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=9403827&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=9403827&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="500" height="281"></embed></object><p><a href="http://vimeo.com/9403827">Kansas City Ruby Users Group | February 2010 | Kyle J. Ginavan | Progressive Enhancement | kcrug.org</a> from <a href="http://vimeo.com/wesgarrison">Wes Garrison</a> on <a href="http://vimeo.com">Vimeo</a>.</p>
