--- a/source/2010-02-12-kansas-city-ruby-user-group-kyle-j-ginavan-on-progressive-enhancement.html.erb
+++ b/source/2010-02-12-kansas-city-ruby-user-group-kyle-j-ginavan-on-progressive-enhancement.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: ! 'Kansas City Ruby User Group: Kyle J Ginavan on Progressive Enhancement'
-post_date: 2010-02-12 10:30:59.000000000 -06:00
+post_date: 2010-02-12
 ---
 Presentation: <a href="http://twitter.com/kylejginavan">Kyle Ginivan</a> on Progressive Enhancement
 <blockquote><strong>Progressive enhancement</strong> is a strategy for web  design that emphasizes accessibility, semantic markup, and external  stylesheet and scripting technologies. Progressive enhancement uses web  technologies in a layered fashion that allows everyone to access the  basic content and functionality of a web page, using any browser or  Internet connection, while also providing those with better bandwidth or  more advanced browser software an enhanced version of the page.
