--- a/source/2010-03-01-windows-7-taking-too-long-to-boot.html.erb
+++ b/source/2010-03-01-windows-7-taking-too-long-to-boot.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Windows 7 Taking Too Long To Boot?
-post_date: 2010-03-01 00:16:04.000000000 -06:00
+post_date: 2010-03-01
 ---
 You may like having a picture for your desktop background. You may be minimalist and choose a solid color. If you're the latter, your computer may take about 30 extra seconds to start up. Microsoft has acknowledged this issue and to fix it you can do one of the following:
 <ul>
