--- a/source/2010-06-10-we-have-a-mailing-list.html.erb
+++ b/source/2010-06-10-we-have-a-mailing-list.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: We have a mailing list!
-post_date: 2010-06-10 22:17:01.000000000 -05:00
+post_date: 2010-06-10
 ---
 Be sure to sign up for our news and updates by clicking this <a href="http://eepurl.com/zVYp">link</a>.
 
