--- a/source/2010-07-05-overriding-rails-automatic-timestamps-updated_at-created_at.html.erb
+++ b/source/2010-07-05-overriding-rails-automatic-timestamps-updated_at-created_at.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: ! 'Overriding Rails'' automatic timestamps: updated_at & created_at'
-post_date: 2010-07-05 03:15:55.000000000 -05:00
+post_date: 2010-07-05
 ---
 When converting something in a project, I found that I needed to updated a field for every record in a Request table.  No problem, except this client grabs a SQL dump and run reports on it.  So, Rails' automatic timestamping of the updated_at field made all of the Requests look like they'd just been updated.  Which they had, but not by users.
 
