--- a/source/2010-09-13-godaddy-common-name-my-domain-com-is-already-present-in-a-current-certificate.html.erb
+++ b/source/2010-09-13-godaddy-common-name-my-domain-com-is-already-present-in-a-current-certificate.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: ! 'Godaddy: Common name my.domain.com is already present in a current certificate'
-post_date: 2010-09-13 19:00:49.000000000 -05:00
+post_date: 2010-09-13
 ---
 When submitting a CSR for creating a new SSL certificate on <a href="http://bit.ly/dbgddyffa">godaddy.com</a> I received this error:
 
