--- a/source/2010-09-17-rspec2-rails3-and-spork-with-drb-to-get-faster-tests.html.erb
+++ b/source/2010-09-17-rspec2-rails3-and-spork-with-drb-to-get-faster-tests.html.erb
@@ -1,27 +1,27 @@
 ---
 layout: article
 title: rspec2, rails3, and spork with drb to get faster tests
-post_date: 2010-09-17 01:52:12.000000000 -05:00
+post_date: 2010-09-17
 ---
 I started using rspec2 and rails3 on a project and wanted faster tests.
 
-<pre class="code" name="ruby">Gemfile:
+<% code("ruby") do %>Gemfile:
 gem 'spork'
 
 bundle install
 
 spork --bootstrap
-</pre>
+<% end %>
 
 Bootstrapping will edit your spec_helper.rb file with some instructions.  I had a vanilla spec_helper file, so everything got moved into the <code>Spork.prefork</code> block.
 
 Also, I'm using autotest, so I added <code>--drb</code> to my .rspec file.
 
 Finally:
-<pre class="code" name="ruby">
+<% code("ruby") do %>
 spork &
 autotest
-</pre>
+<% end %>
 
 I only had 15 tests at the time that I did this, but they went from running in 6 seconds to running in 1.5 seconds. Significant.
 
