--- a/source/2011-02-02-mark-a-scenario-in-cucumber-as-pending.html.erb
+++ b/source/2011-02-02-mark-a-scenario-in-cucumber-as-pending.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Mark a scenario in cucumber as pending
-post_date: 2011-02-02 15:37:37.000000000 -06:00
+post_date: 2011-02-02
 ---
 If you're writing lots of cucumber scenarios, sometimes you need to mark one pending so that you can focus on other things.  If you're refactoring, for instance, you don't need ten failing tests when one will do.
 
@@ -9,27 +9,27 @@ So, there are a couple ways that we use to do pending cucumber scenarios:
 
 <h2>Write a non-defined step</h2>
 By default, a non-defined step will stop the execution of the scenario.
-<% code('ruby') do %>
+<% code("ruby") do %>
   Scenario: login with valid credentials
     Given this is pending
     ...
-</pre>
+<% end %>
 This will show the scenario along with a note about defining the step.
 
 <h2>Create a pending step</h2>
 
 In one of your step definition files, add a step:
-<% code('ruby') do %>
+<% code("ruby") do %>
   Given /^PENDING/ do
     pending
   end
-</pre>
+<% end %>
 
 Then you can use it like:
-<% code('ruby') do %>
+<% code("ruby") do %>
   Scenario: login with valid credentials
     Given PENDING I have valid credentials
-</pre>
+<% end %>
 
 <h2>Use the @wip tag</h2>
 There's also the <code>@wip</code> tag, which focuses you down to a specific test.
