--- a/source/2011-06-07-configuration-for-mailjet-email-delivery-with-ruby-on-rails.html.erb
+++ b/source/2011-06-07-configuration-for-mailjet-email-delivery-with-ruby-on-rails.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Configuration for mailjet email delivery with Ruby on Rails
-post_date: 2011-06-07 10:00:03.000000000 -05:00
+post_date: 2011-06-07
 ---
 <p>Setting up mailjet.com to deliver your mail via Ruby on Rails?  Here's how, because their <a href="https://www.mailjet.com/docs/getting_started">Getting Started</a> is nothing but placeholder headers right now.<br>
 <div class="thumbnail"><a href="https://skitch.com/wesg/fdkc8/mailjet-real-time-emailing-mailjet.com"><img src="https://img.skitch.com/20110607-bmbfb3f4pjrcawsya4yab9dcic.preview.jpg" alt="Mailjet : Real-time Emailing - mailjet.com" /></a><br /></div>
@@ -14,25 +14,25 @@ post_date: 2011-06-07 10:00:03.000000000 -05:00
 <li>Add a sending address (Accounts > <a href="https://www.mailjet.com/account/sender">Sender Addresses</a>)</li>
 <li>Update your Rails ActionMailer configuration
 <ul><li>Find the settings you need at: <a href="https://www.mailjet.com/account/setup">https://www.mailjet.com/account/setup</a><br>
-  <pre>
-    SMTP server:
+  <% code("shell") do %>
+    SMTP server: 
     in.mailjet.com
 
-    Username (API Key):
+    Username (API Key): 
     12345678901234567890
 
-    Password (Secret Key):
+    Password (Secret Key): 
     99999999999999999999999999999999
 
-    Port:
+    Port: 
     25 or 587 (some providers block port 25)
 
-    Use TLS:
-    yes
-  </pre></li>
-  <li>Set these settings in config/application.rb (or config/environments/production.rb):
-  <% code('ruby') do %>
-
+    Use TLS: 
+    yes    
+  <% end %></li>
+  <li>Set these settings in config/application.rb (or config/environments/production.rb): 
+  <% code("ruby") do %>
+    
     config.action_mailer.raise_delivery_errors = false
     config.action_mailer.perform_deliveries = true
 
@@ -44,8 +44,8 @@ post_date: 2011-06-07 10:00:03.000000000 -05:00
       :user_name => "12345678901234567890",
       :password => "99999999999999999999999999999999"
     }
-
-  </pre>
+    
+  <% end %>
   </li>
   </ul></li>
 </ul>
