--- a/source/2012-03-08-bundler-1-1-vs-1-0-install-speedup.html.erb
+++ b/source/2012-03-08-bundler-1-1-vs-1-0-install-speedup.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Bundler 1.1 vs 1.0 install speedup
-post_date: 2012-03-08 20:11:57.000000000 -06:00
+post_date: 2012-03-08
 ---
 <a href="http://gembundler.com/">Bundler</a> 1.1 went official yesterday.  One of the big improvements is speed.  Previous versions of bundler would need to download all of the rubygems information in order to build a dependency tree.
 
@@ -11,7 +11,7 @@ Now, bundler 1.1 is smarter about this.  It can ask rubygems.org directly to giv
 
 Here are my results, for a project with a brand new empty gemset:
 
-<% code('ruby') do %>
+<% code("ruby") do %>
 $ gem install bundler -v=1.0.18 && time bundle install
 Installing ...
 Your bundle is complete! Use `bundle show [gemname]` to see where a bundled gem is installed.
@@ -29,7 +29,7 @@ Your bundle is complete! Use `bundle show [gemname]` to see where a bundled gem 
 real	22.015s
 user	28.377s
 sys	18.442s
-</pre>
+<% end %>
 
 Speedy!
 
