--- a/source/2012-06-12-whats-new-in-ruby-the-june-2012-edition.html.erb
+++ b/source/2012-06-12-whats-new-in-ruby-the-june-2012-edition.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: ! 'What''s New in Ruby: The June 2012 edition'
-post_date: 2012-06-12 21:26:50.000000000 -05:00
+post_date: 2012-06-12
 ---
 Every month, <a href="http://meetup.com/kcruby">Kansas City Ruby</a> (#kcruby) reviews a subset of Peter Cooper's fantastic <a href="http://rubyweekly.com/?utm_source=databasically">Ruby Weekly</a> selections, along with other items picked up around the web.
 
