--- a/source/2012-08-14-whats-new-in-ruby-august-2012-editio.html.erb
+++ b/source/2012-08-14-whats-new-in-ruby-august-2012-editio.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: ! 'What''s New in Ruby: The August 2012 edition'
-post_date: 2012-08-14 15:59:28.000000000 -05:00
+post_date: 2012-08-14
 ---
 Every month, <a href="http://meetup.com/kcruby">Kansas City Ruby</a> (#kcruby) reviews a subset of Peter Cooper's fantastic <a href="http://rubyweekly.com/?utm_source=databasically">Ruby Weekly</a> selections, along with other items picked up around the web.
 
@@ -10,32 +10,32 @@ Every month, <a href="http://meetup.com/kcruby">Kansas City Ruby</a> (#kcruby) r
 
 <h4><a href="http://myronmars.to/n/dev-blog/2012/06/rspecs-new-expectation-syntax" target="_blank">rspec's new expectation syntax</a></h4>
 <p>rspec is getting a new expectation syntax.</p>
-Now: <% code('ruby') do %>foo.should eq(bar)
-foo.should_not eq(bar)</pre>
-Then: <% code('ruby') do %>expect(foo).to eq(bar)
-expect(foo).not_to eq(bar)</pre>
+Now: <% code("ruby") do %>foo.should eq(bar)
+foo.should_not eq(bar)<% end %>
+Then: <% code("ruby") do %>expect(foo).to eq(bar)
+expect(foo).not_to eq(bar)<% end %>
 <p>Read <a href="http://myronmars.to/n/dev-blog/2012/06/rspecs-new-expectation-syntax" target="_blank">the post</a> to get more information about the new rspec syntax.</p>
 
 <h4><a href="http://reefpoints.dockyard.com/ruby/2012/06/26/rails-4-sneak-peek-async-actionmailer.html" target="_blank">Rails 4.0 Sneak Peek: Asynchronous ActionMailer</a></h4>
 <p>
 Rails 4.0 has <code>Rails.queue</code> and this new feature allows you to push emails into the queue with code like:
-<% code('ruby') do %>class WelcomeMailer < ActionMailer::Base
+<% code("ruby") do %>class WelcomeMailer < ActionMailer::Base
   self.async = true
-end</pre>
+end<% end %>
 
 When you call the mailer:
-<% code('ruby') do %>WelcomeMailer.welcome(@user.id).deliver<% end %>
+<% code("ruby") do %>WelcomeMailer.welcome(@user.id).deliver<% end %>
 
 ... you need to use ids and look the object up in the mailer, instead of marshalling the entire object, like so:
 
-<% code('ruby') do %>
+<% code("ruby") do %>
 class WelcomeMailer < ActionMailer::Base
   def welcome(id)
     @user = User.find(id)
     ...
   end
 end
-</pre>
+<% end %>
 </p>
 
 <h4><a href="" target="_blank"></a></h4>
