--- a/source/2012-11-13-whats-new-in-ruby-november-2012-edition.html.erb
+++ b/source/2012-11-13-whats-new-in-ruby-november-2012-edition.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: ! 'What''s New in Ruby: November 2012 edition'
-post_date: 2012-11-13 22:55:10.000000000 -06:00
+post_date: 2012-11-13
 ---
 Every month, <a href="http://meetup.com/kcruby">Kansas City Ruby</a> (#kcruby) reviews a subset of Peter Cooper's fantastic <a href="http://rubyweekly.com/?utm_source=databasically">Ruby Weekly</a> selections, along with other items picked up around the web.
 
