--- a/source/2013-01-08-whats-new-in-ruby-january-2013-edition.html.erb
+++ b/source/2013-01-08-whats-new-in-ruby-january-2013-edition.html.erb
@@ -1,8 +1,7 @@
 ---
 layout: article
 title: ! 'What''s New in Ruby: January 2013 edition'
-post_date: 2013-01-08 23:41:58.000000000 -06:00
-tags: kc-ruby, ruby, ruby-on-rails
+post_date: 2013-01-08
 ---
 Every month, <a href="http://meetup.com/kcruby">Kansas City Ruby</a> (#kcruby) reviews a subset of Peter Cooper's fantastic <a href="http://rubyweekly.com/?utm_source=databasically">Ruby Weekly</a> selections, along with other items picked up around the web.
 
