--- a/source/2013-04-23-whats-new-in-ruby-april-2013-edition.html.erb
+++ b/source/2013-04-23-whats-new-in-ruby-april-2013-edition.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: ! 'What''s New In Ruby: April 2013 edition'
-post_date: 2013-04-23 21:49:11.000000000 -05:00
+post_date: 2013-04-23
 ---
 Every month, <a href="http://meetup.com/kcruby">Kansas City Ruby</a> (#kcruby) reviews a subset of Peter Cooper's fantastic <a href="http://rubyweekly.com/?utm_source=databasically">Ruby Weekly</a> selections, along with other items picked up around the web.
 
