--- a/source/2013-05-14-whats-new-in-ruby-may-2013-edition.html.erb
+++ b/source/2013-05-14-whats-new-in-ruby-may-2013-edition.html.erb
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: ! 'What''s New In Ruby: May 2013 edition'
-post_date: 2013-05-14 22:14:27.000000000 -05:00
+post_date: 2013-05-14
 ---
 Every month, <a href="http://meetup.com/kcruby">Kansas City Ruby</a> (#kcruby) reviews a subset of Peter Cooper's fantastic <a href="http://rubyweekly.com/?utm_source=databasically">Ruby Weekly</a> selections, along with other items picked up around the web.
 
